SERVER-6794 do not use WSAGetLastError() for file system errors