src/mongo/db/instance.cpp
@@ -1007,7 +1007,7 @@ namespace mongo {
                with acquirePathLock().  */
 #ifdef _WIN32
             if( _chsize( lockFile , 0 ) )
-                log() << "couldn't remove fs lock " << WSAGetLastError() << endl;
+                log() << "couldn't remove fs lock " << errnoWithDescription(_doserrno) << endl;
             CloseHandle(lockFileHandle);
 #else
             if( ftruncate( lockFile , 0 ) )
